--- a/Three Thing Game/Three Thing Game/Three Thing Game.csproj
+++ b/Three Thing Game/Three Thing Game/Three Thing Game.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="GameClass.cs" />
+    <Compile Include="MapHandler.cs" />
     <Compile Include="MenuClass.cs" />
     <Compile Include="Physics.cs" />
     <Compile Include="Player.cs" />
