--- a/Three Thing Game/Three Thing Game/Three Thing Game.csproj
+++ b/Three Thing Game/Three Thing Game/Three Thing Game.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Enemy.cs" />
     <Compile Include="GameClass.cs" />
+    <Compile Include="Lurker.cs" />
     <Compile Include="MapHandler.cs" />
     <Compile Include="MenuClass.cs" />
     <Compile Include="Physics.cs" />
